--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>Profile</header>
     <ul> 
       <a class="nav-link" href="#Introduction" rel="internal"><li>Introduction</li></a>
-      <a class="nav-link" href="#Techinical-skils" rel="internal"><li>Technical skills</li></a>
-      <a class="nav-link" href="#softskills" rel="internal"><li>Soft Skills</li></a>
-      <a class="nav-link" href="#education" rel="internal"><li>Education</li></a>
+      <a class="nav-link" href="#Technical-skils" rel="internal"><li>Technical skills</li></a>
+      <a class="nav-link" href="#Soft-skills" rel="internal"><li>Soft Skills</li></a>
+      <a class="nav-link" href="#Education" rel="internal"><li>Education</li></a>
       <a class="nav-link" href="#experience" rel="internal"><li>Experience</li></a>
       <a class="nav-link" href="#certifications" rel="internal"><li>Certifications</li></a>
       
