--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>Profile</header>
     <ul> 
       <a class="nav-link" href="#Introduction" rel="internal"><li>Introduction</li></a>
-      <a class="nav-link" href="#Technical-skils" rel="internal"><li>Technical skills</li></a>
+      <a class="nav-link" href="#Technical-skills" rel="internal"><li>Technical skills</li></a>
       <a class="nav-link" href="#Soft-skills" rel="internal"><li>Soft Skills</li></a>
       <a class="nav-link" href="#Education" rel="internal"><li>Education</li></a>
       <a class="nav-link" href="#experience" rel="internal"><li>Experience</li></a>
